--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="result" id="result"></div>
 
     <script>
-        fetch('url_to_your_json_file.json')
+        fetch('https://raw.githubusercontent.com/TrustImpact/JobsLookUp/main/soc2020_coding_index.json')
     .then(response => response.json())
     .then(data => {
     // Use your data here
