--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             let fetchedData = [];
             let fuse;
 
-            fetch('https://raw.githubusercontent.com/TrustImpact/JobsLookUp/main/SOC2020_coding_index.json')
+            fetch('https://raw.githubusercontent.com/TrustImpact/JobsLookUp/main/SOC2020%2BONET%2BGREENSOC%2BNES.json')
             .then(response => response.json())
             .then(data => {
                 fetchedData = data;
@@ -129,6 +129,7 @@
                     <h4>SDS Green Job Category: ${job["SDS Green Job Category"]}</h4>
                     <h4>O*NET Green Job: ${job["O*NET Green Job"]}</h4>
                     <h4>O*NET Green Job Category: ${job["O*NET Green Job Category"]}</h4>
+                    <h4>Simplified National Statistics Socio-economic classification (NS-SEC): ${job["Simplified NES"]}</h4>
                 `).show(); // Ensure job details are visible
             }
             
