--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                     <h4>SOC Code: ${job["SOC 2020"]}</h4> 
                     <h4>SDS Green Job: ${job["SDS Green Job?"]}</h4>
                     <h4>SDS Green Job Category: ${job["SDS Green Job Category"]}</h4>
-                    <h4>O*NET Green Job: ${job["O*NET Green Job"]}</h4>
-                    <h4>O*NET Green Job Category: ${job["O*NET Green Job Category"]}</h4>
+                    <!-- <h4>O*NET Green Job: ${job["O*NET Green Job"]}</h4>
+                    <h4>O*NET Green Job Category: ${job["O*NET Green Job Category"]}</h4> -->
                     <h4>Simplified National Statistics Socio-economic classification (NS-SEC): ${job["Simplified NES"]}</h4>
                 `).show(); // Ensure job details are visible
             }
