--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             let fetchedData = [];
             let fuse;
 
-            fetch('https://raw.githubusercontent.com/TrustImpact/JobsLookUp/main/SOC2020%2BONET%2BGREENSOC%2BNES.json')
+            fetch('https://raw.githubusercontent.com/TrustImpact/JobsLookUp/refs/heads/main/SOC2020_with_GreenSOC_and_NS_SEC.json')
             .then(response => response.json())
             .then(data => {
                 fetchedData = data;
@@ -125,9 +125,9 @@
                 $('#job-details').html(`
                     <h4>Job Title: ${job["INDEXOCC NATURAL WORD ORDER"]}</h4>
                     <h4>SOC Code: ${job["SOC 2020"]}</h4> 
-                    <h4>SDS Green Job: ${job["SDS Green Job?"]}</h4>
-                    <h4>SDS Green Job Category: ${job["SDS Green Job Category"]}</h4>
-                    <h4>Simplified National Statistics Socio-economic classification (NS-SEC): ${job["Simplified NES"]}</h4>
+                    <h4>SDS Green Job: ${job["Green or not?"]}</h4>
+                    <h4>SDS Green Job Category: ${job["Green Category"]}</h4>
+                    <h4>Simplified National Statistics Socio-economic classification (NS-SEC): ${job["SSEC"]}</h4>
                 `).show(); // Ensure job details are visible
             }
             
