--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<style>
+    <style>
         body {
             font-family: 'Raleway', sans-serif;
             display: flex;
@@ -77,7 +77,9 @@
     <button id="search-btn">Look Up</button>
     <button id="reset-btn">Reset</button>
     <div id="search-results"></div>
-    <div id="job-details"></div>
+    <div id="job-details">
+        <button id="back-btn" style="display:none;">Back</button>
+    </div>
 
     <script>
         $(document).ready(function() {
@@ -131,7 +133,7 @@
 
             // Function to display job details when a result is clicked
             function displayJobDetails(job) {
-                $('#search-results').empty().hide(); // Hide and clear the search results
+                $('#search-results').hide(); // Hide the search results
 
                 $('#job-details').html(`
                     <h4>Job Title: ${job["INDEXOCC NATURAL WORD ORDER"]}</h4>
@@ -139,9 +141,16 @@
                     <h4>SDS Green Job: ${job["Green or not?"]}</h4>
                     <h4>SDS Green Job Category: ${job["Green category"]}</h4>
                     <h4>Simplified National Statistics Socio-economic classification (NS-SEC): ${job["ssec"]}</h4>
-                `).show(); // Ensure job details are visible
+                    <button id="back-btn">Back</button>
+                `).show(); // Show the job details
+
+                // Bind functionality to the 'Back' button
+                $('#back-btn').on('click', function() {
+                    $('#job-details').hide(); // Hide job details
+                    $('#search-results').show(); // Show the search results
+                });
             }
-            
+
             // Reset the UI to its initial state
             function resetUI() {
                 $('#job-search-input').val(''); // Clear the search input
